Remove Set/Object[] support recurse sorting from LiteralValueFormatter
We don't have a Set type anymore and arrays are always a List, never a
object array.

The `Sorted.sortRecursive` call for maps can also be replaced with a
non-recursive sort because the value formatting itself is recursing into
the elements.